--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,6 @@
 <body>
   <header>
-    <h1> Eliott Mengual </h1>
+    <h1> Eliott </h1>
     <ul>
       <li><a href="faeea"> Test 1 </a></li>
       <li><a href="gzlfq"> Test 2 </a></li>
@@ -8,7 +8,7 @@
     </ul>
   </header>
   <main>
-    <h1> Salut, je m'appelle Eliott Mengual et je suis en ecole d'ingenieur</h1>
+    <h1> Salut, je m'appelle Eliott et je suis en ecole d'ingenieur</h1>
     <button type="button"> View my work </button>
   </main>
   <footer>
@@ -17,6 +17,6 @@
       <li><a href="www.linkedin.com"> LinkedIn</a></li>
       <li><a href="www.twitter.com"> Twitter </a></li>
     </ul>
-    <h6>  Eliott Mengual </h6>
+    <h6>  Eliott </h6>
   </footer>
 </body>
