--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -5,23 +5,50 @@
 ul, li {
   display :inline;
   list-style-type :none;
+  display: flex;
+  justify-content: center;
+  margin-left: 50px;
+  margin-right: 50px;
+  font-size:25px;
+  
 }
+
+ul {
+  padding: 20px;
+  size: 20px;
+
+}
+
+ul, li, a {
+  
+}
+
 h1 {
   color: black;
+  text-align:center;
 }
 header {
-  background-color :white;
+  background-image : url('https://cdn.pixabay.com/photo/2016/09/04/20/14/sunset-1645105__340.jpg');
+  height: 200px;
+  margin:0;
 }
 
 main {
   height :  650px;
-  background-image : url('https://images.pexels.com/photos/977736/pexels-photo-977736.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260')
+  background-image : url('https://images.pexels.com/photos/977736/pexels-photo-977736.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
+  text-align:center;
+  margin:auto;
 }
 
 footer {
    position:absolute;
    bottom:0;
    width:100%;
-   height:60px;   /* Height of the footer */
+   height:100px;   /* Height of the footer */
    background:#6cf;
+   margin:0;
 }
+button {
+  text-align: center;
+}
+
