--- a/app/assets/stylesheets/pages.css.css
+++ b/app/assets/stylesheets/pages.css.css
@@ -1,26 +1,71 @@
-ul, li {
-  display: inline;
-  list-style-type: none;
+// Place all the styles related to the Pages controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.total { 
+  background: url('https://i.pinimg.com/originals/0a/b7/b3/0ab7b3dde116bd7136ffc1e8f902b036.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
+
+ul, li {
+  display :inline;
+  list-style-type :none;
+  display: flex;
+  justify-content: center;
+  margin-left: 70px;
+  margin-right: 50px;
+  font-size:25px;
+  
+}
+
+.titre {
+  padding-top:50px;
+}
+.titremain {
+  padding-top: 25px;
+}
+ul {
+  padding: 20px;
+  size: 20px;
+
+}
+
 
 h1 {
   color: black;
+  text-align:center;
 }
-
 header {
-  background-color: white;
+  /*background-image : url('https://cdn.pixabay.com/photo/2016/09/04/20/14/sunset-1645105__340.jpg');*/
+  height: 200px;
+  margin:0;
+  opacity: 0.9;
+  background-color:transparent !important;
 }
 
 main {
-  height: 650px;
-  background-image: url("https://images.pexels.com/photos/977736/pexels-photo-977736.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
+  height :  650px;
+  /*background-image : url('https://images.pexels.com/photos/977736/pexels-photo-977736.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');*/
+  text-align:center;
+  background-color:transparent !important;
+  margin:0;
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  /* Height of the footer */
-  background: #6cf;
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:100px;   /* Height of the footer */
+   margin:0;
+   opacity: 0.9;
+   background-color:transparent !important;
 }
+button {
+  text-align: center;
+}
+
+
