--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,22 +1,24 @@
-<body>
-  <header>
-    <h1> Eliott </h1>
-    <ul>
-      <li><a href="faeea"> Test 1 </a></li>
-      <li><a href="gzlfq"> Test 2 </a></li>
-      <li><a href="glsld"> Test 3 </a></li>
-    </ul>
-  </header>
-  <main>
-    <h1> Salut, je m'appelle Eliott et je suis en ecole d'ingenieur</h1>
-    <button type="button"> View my work </button>
-  </main>
-  <footer>
-    <ul>
-      <li><a href="https://www.github.com"> Github </a></li>
-      <li><a href="www.linkedin.com"> LinkedIn</a></li>
-      <li><a href="www.twitter.com"> Twitter </a></li>
-    </ul>
-    <h6>  Eliott </h6>
-  </footer>
-</body>
+ <html>
+  <body>
+    <header>
+      <h1 class="titre"> Eliott </h1>
+      <ul>
+        <li><%=link_to("Bio", bio_path()) %></li>
+        <li><%=link_to("Work", work_path()) %></li>
+        <li><%=link_to("Contact", contact_path()) %></li>
+      </ul>
+    </header>
+    <main>
+      <h1 class="titremain"> Salut, je m'appelle Eliott et je suis en ecole d'ingenieur.</h1>
+      <%=link_to("View my work", work_path()) %>
+    </main>
+    <footer>
+      <ul>
+        <li><a href="https://www.github.com"> <%= image_tag("github-logo.svg", :size => '30x30' )%> </a></li>
+        <li><a href="https://linkedin.com"> <%= image_tag("linkedin-logo.svg", :size => '30x30') %> </a></li>
+        <li><a href="https://twitter.com"> <%= image_tag("twitter-logo-silhouette.svg", :size => '30x30') %> </a></li>
+      </ul>
+      <h6> © Eliott 2018 </h6>
+    </footer>
+  </body>
+</html>
